k8s/namespaces/monitoring/alloy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy-metrics
  namespace: monitoring
  labels:
    app.kubernetes.io/name: alloy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: alloy
  ports:
    - name: prom-metrics
      port: 9464
      targetPort: 9464
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: alloy-syslog
  namespace: monitoring
  labels:
    app.kubernetes.io/name: alloy
  annotations:
    io.cilium/lb-ipam-ips: "10.0.0.248"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: alloy
  ports:
    - name: syslog-tcp
      port: 514
      targetPort: 514
      protocol: TCP
    - name: syslog-udp
      port: 514
      targetPort: 514
      protocol: UDP
